@@ -1,3 +1,8 @@
+Fri Mar 19 16:44:37 UTC 2010  Steve Huston  <shuston@riverace.com>
+
+        * ace/Dev_Poll_Reactor.cpp (find_handler): If the handle isn't
+          registered, don't try to dereference a null pointer; return 0.
+
 Fri Mar 19 16:16:30 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
 
         * tests/MT_NonBlocking_Connect_Test.cpp:
